--- a/news-journal/index.html
+++ b/news-journal/index.html
@@ -47,74 +47,72 @@
             </div>
 
             <!-- Jan 2024 ... -->
-            <div class="timeline-item">
-              <div class="timeline-dot"></div>
-              <div class="timeline-date month">January</div>
-              <div class="timeline-content">
-                <p><a href="https://www.linkedin.com/in/rushil-thareja-a80400179/" target="_blank">Rushil Thareja</a> is joining us as a new Ph.D. student.</p>
-            </div>
-              <div class="timeline-content">
-                  <p><a href="https://www.linkedin.com/in/likitha9/" target="_blank">Likitha</a> will present a demo paper at CODS-COMAD conference (Group recommendation). We are also co-organizing the tutorial track of the conference.</p>
+            <div class="newsjournal-item">
+              <div class="newsjournal-month">January</div>
+              <div class="newsjournal-content">
+                <p><a href="https://www.linkedin.com/in/rushil-thareja-a80400179/" target="_blank">Rushil Thareja</a> is
+                  joining us as a new Ph.D. student.</p>
               </div>
+            </div>
           </div>
-          
-            <!-- December 2023 -->
-            <div class="newsjournal-item">
-              <div class="newsjournal-month">December</div>
-              <div class="newsjournal-content">
-                <p><a href="https://vishalpallagani.github.io/" target="_blank">Vishal</a> will present a paper at
-                  Neurips 2023 workshop on Generalized Planning (LLMs and Planning).</p>
-                <p><a href="https://sites.google.com/site/biplavsrivastava/" target="_blank">Biplav</a> will participate
-                  with two posters at Americal Geophysical Union (AGU) (AI and water).</p>
-                <!-- Additional news items for December 2023... -->
-              </div>
-            </div>
 
-            <!-- November 2023 -->
-            <div class="newsjournal-item">
-              <div class="newsjournal-month">November</div>
-              <div class="newsjournal-content">
-                <p><a href="https://kausik-l.github.io/" target="_blank">Kausik</a> is presenting one paper each at IEEE
-                  TPS and ACM AI and Finance (ICAIF) conferences (AI trust).</p>
-              </div>
+          <!-- December 2023 -->
+          <div class="newsjournal-item">
+            <div class="newsjournal-month">December</div>
+            <div class="newsjournal-content">
+              <p><a href="https://vishalpallagani.github.io/" target="_blank">Vishal</a> will present a paper at
+                Neurips 2023 workshop on Generalized Planning (LLMs and Planning).</p>
+              <p><a href="https://sites.google.com/site/biplavsrivastava/" target="_blank">Biplav</a> will participate
+                with two posters at Americal Geophysical Union (AGU) (AI and water).</p>
+              <!-- Additional news items for December 2023... -->
             </div>
+          </div>
 
-            <div class="newsjournal-item">
-              <div class="newsjournal-month">August</div>
-              <div class="newsjournal-content">
-                <p><a href="https://vishalpallagani.github.io/" target="_blank">Vishal Pallagani</a> completed second
-                  internship at IBM Research, invited for next summer as well.</p>
-              </div>
+          <!-- November 2023 -->
+          <div class="newsjournal-item">
+            <div class="newsjournal-month">November</div>
+            <div class="newsjournal-content">
+              <p><a href="https://kausik-l.github.io/" target="_blank">Kausik</a> is presenting one paper each at IEEE
+                TPS and ACM AI and Finance (ICAIF) conferences (AI trust).</p>
             </div>
-            <div class="newsjournal-item">
-              <div class="newsjournal-month">May</div>
-              <div class="newsjournal-content">
-                <p><a href="https://www.linkedin.com/in/sai-teja-paladi-52a062140/" target="_blank">Sai Teja Paladi</a>
-                  graduated with a Master's degree in Computer Science. He helped our team in developing and deploying
-                  various tools.</p>
-              </div>
+          </div>
+
+          <div class="newsjournal-item">
+            <div class="newsjournal-month">August</div>
+            <div class="newsjournal-content">
+              <p><a href="https://vishalpallagani.github.io/" target="_blank">Vishal Pallagani</a> completed second
+                internship at IBM Research, invited for next summer as well.</p>
             </div>
-            <div class="newsjournal-item">
-              <div class="newsjournal-month">April</div>
-              <div class="newsjournal-content">
-                <p><a href="https://kausik-l.github.io/" target="_blank">Kausik Lakkaraju</a> secured the best graduate
-                  student poster presentation award in the Computer Science department for his work on 'Rating of AI
-                  Systems through a Causal Lens' at the <a
-                    href="https://www.sc.edu/about/signature_events/discover_uofsc/about/news/2023/20220428_Check_Out_DUSC_2023.php"
-                    target="_blank">Discover USC</a> event.</p>
-              </div>
+          </div>
+          <div class="newsjournal-item">
+            <div class="newsjournal-month">May</div>
+            <div class="newsjournal-content">
+              <p><a href="https://www.linkedin.com/in/sai-teja-paladi-52a062140/" target="_blank">Sai Teja Paladi</a>
+                graduated with a Master's degree in Computer Science. He helped our team in developing and deploying
+                various tools.</p>
             </div>
-            <div class="newsjournal-container">
-              <div class="newsjournal-dot"></div>
-              <div class="newsjournal-year">2020</div>
+          </div>
+          <div class="newsjournal-item">
+            <div class="newsjournal-month">April</div>
+            <div class="newsjournal-content">
+              <p><a href="https://kausik-l.github.io/" target="_blank">Kausik Lakkaraju</a> secured the best graduate
+                student poster presentation award in the Computer Science department for his work on 'Rating of AI
+                Systems through a Causal Lens' at the <a
+                  href="https://www.sc.edu/about/signature_events/discover_uofsc/about/news/2023/20220428_Check_Out_DUSC_2023.php"
+                  target="_blank">Discover USC</a> event.</p>
             </div>
-            <div class="newsjournal-item">
-              <div class="newsjournal-month">October</div>
-              <div class="newsjournal-content">
-                <p>First physical/virtual conference on Collaborative assistants for the society, 16 Oct 2020, (CASY
-                  2020). Had 140 registered participants from around the world.</p>
-              </div>
+          </div>
+          <div class="newsjournal-container">
+            <div class="newsjournal-dot"></div>
+            <div class="newsjournal-year">2020</div>
+          </div>
+          <div class="newsjournal-item">
+            <div class="newsjournal-month">October</div>
+            <div class="newsjournal-content">
+              <p>First physical/virtual conference on Collaborative assistants for the society, 16 Oct 2020, (CASY
+                2020). Had 140 registered participants from around the world.</p>
             </div>
+          </div>
           </div>
           </div>
 
