--- a/index.html
+++ b/index.html
@@ -113,7 +113,7 @@
                           elections), a deployed application paper (ULTRA), a demonstration paper (AI planning for
                           information spread in social networks), and counting.</p>
                         <p><a href="https://www.linkedin.com/in/likitha9/" target="_blank">Likitha</a> successfully
-                          defended her dissertation proposal: <i>Trustable Methods for Group Recommendations With
+                          defended her dissertation proposal on February 2nd: <i>Trustable Methods for Group Recommendations With
                             Application to Team Formation.</i></p>
                       </div>
                     </div>
