--- a/news-journal/index.html
+++ b/news-journal/index.html
@@ -55,7 +55,7 @@
               <div class="newsjournal-content">
                 <p><a href="https://www.linkedin.com/in/rushil-thareja-a80400179/" target="_blank">Rushil Thareja</a>
                   is joining us as a new Ph.D. student.</p>
-                <p><a href="https://www.linkedin.com/in/likitha9/" target="_blank">Likitha</a> will present a demo
+                <p><a href="https://www.linkedin.com/in/likitha9/" target="_blank">Likitha Valluru</a> will present a demo
                   paper at CODS-COMAD conference (Group recommendation). We are also co-organizing the tutorial track
                   of the conference.</p>
               </div>
