--- a/news-journal/index.html
+++ b/news-journal/index.html
@@ -72,7 +72,7 @@
               <div class="newsjournal-content">
                 <p><a href="https://vishalpallagani.github.io/" target="_blank">Vishal</a> will present a paper at
                   Neurips 2023 workshop on Generalized Planning (LLMs and Planning).</p>
-                <p><a href="https://sites.google.com/site/biplavsrivastava/" target="_blank">Biplav</a> will participate
+                <p><a href="https://sites.google.com/site/biplavsrivastava/" target="_blank">Biplav Srivastava</a> will participate
                   with two posters at Americal Geophysical Union (AGU) (AI and water).</p>
                 <!-- Additional news items for December 2023... -->
               </div>
