--- a/index.html
+++ b/index.html
@@ -108,10 +108,13 @@
                       <div class="timeline-dot"></div>
                       <div class="timeline-date month">February</div>
                       <div class="timeline-content">
+                        <p>Our group is the lead to involve the University of South Carolina in collaborating with the National Institute of Standards and Technology (NIST) for the Artificial Intelligence Safety Institute Consortium (AISIC). 
+                          [<a href="https://www.nist.gov/artificial-intelligence/artificial-intelligence-safety-institute" target="_blank">announcement</a>, <a href="https://www.nist.gov/artificial-intelligence/artificial-intelligence-safety-institute/aisic-members" target="_blank">members</a>]</p>
+                        <p>Vishal Pallagani got elected to the Student Committee of the AAAI - the international Association for the  Advancement of Artificial Intelligence!</p>
                         <p>Our <a href="https://ai4society.github.io/" target="_blank">group</a> will be involved at the
                           premier AI conference, AAAI 2024, with a tutorial (LLMs for planning), a workshop (AI and
-                          elections), a deployed application paper (ULTRA), a demonstration paper (AI planning for
-                          information spread in social networks), and counting.</p>
+                          elections), a deployed application paper (ULTRA), and a demonstration paper (AI planning for
+                          information spread in social networks).</p>
                         <p><a href="https://www.linkedin.com/in/likitha9/" target="_blank">Likitha</a> successfully
                           defended her dissertation proposal on February 2nd: <i>Trustable Methods for Group Recommendations With
                             Application to Team Formation.</i></p>
