--- a/projects/group_rec/index.html
+++ b/projects/group_rec/index.html
@@ -67,20 +67,36 @@
               style="background-color: cyan ;height:20px;width:20px;margin-right:10px;border:1px solid black;"></span>
             Trustworthy Group Recommendation
           </h1>
-          <p style="border-width:3px; border-style:solid; border-color:black;padding: 10px;"><mark
-              style="color:red;"><b>NEW!</b></mark> Our <a href="https://arxiv.org/abs/2309.09404">paper</a>
+
+          <p style="border-width:3px; border-style:solid; border-color:black;padding: 10px;">
+            <mark style="color:red;"><b>NEW!</b></mark> Our <a href="https://arxiv.org/abs/2309.09404">paper</a>
             that presents a novel system to recommend teams using a variety of AI methods has been accepted to <a
-              href="https://aaai.org/aaai-conference/iaai-24-call-for-participation/"
-              style="text-decoration:none;"><b><i>IAAI-AAAI'2024</i></b></a> and will receive the <span
-              style="color:violet"><i>Innovative
-                Application</i></span> award.</p>
-          <p style="border-width:3px; border-style:solid; border-color:black;padding: 10px;"><mark
-              style="color:red;"><b>NEW!</b></mark> Our <a href="https://dl.acm.org/doi/10.1145/3632410.3632503">demo
-              paper</a> about deploying <a
-              href="https://ai4society.github.io/projects/teaming/index.html#:~:text=We%20introduce%20ULTRA,others%20can%20use.">ULTRA</a>
+                href="https://aaai.org/aaai-conference/iaai-24-call-for-participation/"
+                style="text-decoration:none;"><b><i>IAAI-AAAI'2024</i></b></a> and received the <span
+                style="color:violet"><i>Deployed Application</i></span> award <i>(can be enlarged)</i>.<br><br>
+            <img src="images/ultra_award.jpeg" id="myImg0" width="85" height="100" style="display:block; margin: 0 auto;">
+
+            <div id="myModal" class="modal">
+              <span class="close">&times;</span>
+              <img class="modal-content" id="img01">
+              <div id="caption"></div>
+            </div>
+
+            <script>
+              // Call the function with your specific IDs and class
+              setupModal("myImg0", "myModal", "img01", "caption", "close");
+            </script>
+        </p>
+        
+        <p style="border-width:3px; border-style:solid; border-color:black;padding: 10px;">
+            <mark style="color:red;"><b>NEW!</b></mark> Our <a href="https://dl.acm.org/doi/10.1145/3632410.3632503">demo
+                paper</a> about deploying <a
+                href="https://ai4society.github.io/projects/teaming/index.html#:~:text=We%20introduce%20ULTRA,others%20can%20use.">ULTRA</a>
             in two geographical regions of the world has been accepted to <a
-              href="https://cods-comad.in/call-for-demo-track-papers.php"
-              style="text-decoration:none;"><b><i>CODS-COMAD'2024</i></b></a>.</p>
+                href="https://cods-comad.in/call-for-demo-track-papers.php"
+                style="text-decoration:none;"><b><i>CODS-COMAD'2024</i></b></a>.
+        </p>
+  
           <hr>
 
           <details open>
@@ -357,7 +373,7 @@
                 representation.</span>
               </p>
 
-              <script>
+              <!--<script>
                 // Get the modal
                 var modal = document.getElementById("myModal");
 
@@ -378,7 +394,7 @@
                 span.onclick = function () {
                   modal.style.display = "none";
                 }
-              </script>
+              </script>-->
 
 
 
