--- a/projects/group_rec/index.html
+++ b/projects/group_rec/index.html
@@ -68,13 +68,14 @@
             Trustworthy Group Recommendation
           </h1>
 
-          <p style="border-width:3px; border-style:solid; border-color:black;padding: 10px;">
+          <p style="border-width:3px; border-style:solid; border-color:black;padding: 10px;"><img id="myImg0" src="images/ultra_award.jpeg"
+            alt="🎉 2024 IAAI Deployed Application Award for our AI application, <i>Promoting Research Collaboration with Open Data Driven Team Recommendation in Response to Call for Proposals</i> 🎉"
+            style="width:100%;max-width:100px;height:50px;">
             <mark style="color:red;"><b>NEW!</b></mark> Our <a href="https://arxiv.org/abs/2309.09404">paper</a>
             that presents a novel system to recommend teams using a variety of AI methods has been accepted to <a
                 href="https://aaai.org/aaai-conference/iaai-24-call-for-participation/"
                 style="text-decoration:none;"><b><i>IAAI-AAAI'2024</i></b></a> and received the <span
                 style="color:violet"><i>Deployed Application</i></span> award <i>(can be enlarged)</i>.<br><br>
-            <img src="images/ultra_award.jpeg" id="myImg0" width="85" height="100" style="display:block; margin: 0 auto;">
 
             <div id="myModal" class="modal">
               <span class="close">&times;</span>
@@ -113,7 +114,7 @@
                     Natarajan</a></i>
                 <br>
               </p>
-              <p align="justify"><img id="myImg" src="images/group_recommendation.jpg"
+              <p align="justify"><img id="myImg1" src="images/group_recommendation.jpg"
                   alt="Group Recommendation - Research Potential, Methods, and Fairness"
                   style="width:100%;max-width:100px;height:120px;">We study the problem of group recommendation, an
                 information exploration
@@ -138,7 +139,7 @@
 
               <script>
                 // Call the function with your specific IDs and class
-                setupModal("myImg", "myModal", "img01", "caption", "close");
+                setupModal("myImg1", "myModal", "img01", "caption", "close");
               </script>
             </div>
           </details>
