--- a/projects/group_rec/index.html
+++ b/projects/group_rec/index.html
@@ -301,13 +301,13 @@
               <ul style="padding-left:2.5%;width:100%;vertical-align:middle">
                 <li>[2022] KITE - An Unsupervised, Effective and Inclusive Approach for Textual Content Exploration.<br>
                   <a href="http://casy.cse.sc.edu/kite/" target="_blank"><b>[Tool Website]</b></a>
-                  <a href="https://clipchamp.com/watch/oPT2b3oHOAD" target="_blank"><b>[Demo Video]</b></a>
+                  <!--<a href="https://clipchamp.com/watch/oPT2b3oHOAD" target="_blank"><b>[Demo Video]</b></a>-->
                   <a href="https://www.researchgate.net/profile/Biplav-Srivastava/publication/363608853_KITE_-_An_Unsupervised_Effective_and_Inclusive_Approach_for_Textual_Content_Exploration/links/6324a33a071ea12e363a790e/KITE-An-Unsupervised-Effective-and-Inclusive-Approach-for-Textual-Content-Exploration.pdf"
                     target="_blank"><b>[Paper]</b></a>
                   <a href="https://github.com/BunnyTeja/Text-Visualization" target="_blank"><b>[GitHub]</b></a>
                   <a href="./bib/kite.bib" target="_blank" type="text/plain"><b>[BibTex]</b></a>
                   <br><br>
-                  <center>
+                  <!--<center>
                     <div style="position:relative;width:fit-content;height:fit-content;">
                       <a style="position:absolute;top:20px;right:1rem;opacity:0.8;"
                         href="https://clipchamp.com/watch/oPT2b3oHOAD?utm_source=embed&utm_medium=embed&utm_campaign=watch">
@@ -317,7 +317,7 @@
                       <iframe allow="autoplay;" allowfullscreen style="border:none"
                         src="https://clipchamp.com/watch/oPT2b3oHOAD/embed" width="560" height="315"></iframe>
                     </div>
-                  </center>
+                  </center>-->
 
                 </li>
                 <br>
