--- a/publications/index.html
+++ b/publications/index.html
@@ -92,7 +92,7 @@
                         
                         <li>
                             <b>Expressive and Flexible Simulation of Information Spread Strategies in Social Networks Using Planning
-                            <span class="best-demo-badge">🏆 Best Demo at AAAI-24</span></b><br>
+                            <span class="best-demo-badge">Best Demo at AAAI-24</span></b><br>
                             <i>Proceedings of the Thirty-Eighth Annual Conference of Association for Advancement of Artificial Intelligence - Demonstrations Track (AAAI-24 Demo)</i><br>
                             Bharath Muppasani, Vignesh Narayanan, Biplav Srivastava, Michael N. Huhns<br>
                             <a href='./papers_local/InfoSpread_AAAI24_Demo.pdf' target="_blank">[Paper]</a>
@@ -412,36 +412,32 @@ document.addEventListener("DOMContentLoaded", function() {
     });
 });
 
-// Function to trigger the confetti
-function triggerConfetti() {
-  confetti({
-    particleCount: 100,
-    spread: 70,
-    origin: { y: 0.6 }
-  });
-}
-
-// Event listener for the Best Demo badge
-document.addEventListener('DOMContentLoaded', function() {
-  // Find the Best Demo badge and attach the click event handler
-  var bestDemoBadge = document.querySelector('.best-demo-badge');
-  if (bestDemoBadge) {
-    bestDemoBadge.addEventListener('click', triggerConfetti);
-  }
-});
-
 document.addEventListener('DOMContentLoaded', function() {
     var bestDemoBadge = document.querySelector('.best-demo-badge');
     if (bestDemoBadge) {
         bestDemoBadge.addEventListener('click', function() {
-            // Toggle a class that applies an animation
-            bestDemoBadge.classList.add('animate-badge');
-            setTimeout(function() {
-                bestDemoBadge.classList.remove('animate-badge');
-            }, 1000); // Remove the class after the animation completes
+            // Trigger the confetti effect
+            triggerConfetti();
+
+            // Apply the animate-badge class
+            this.classList.add('animate-badge');
+
+            // Set a timeout to remove the animate-badge class after 1 second
+            setTimeout(() => {
+                this.classList.remove('animate-badge');
+            }, 1000);
         });
     }
 });
+
+// Function to trigger the confetti
+function triggerConfetti() {
+    confetti({
+        particleCount: 100,
+        spread: 70,
+        origin: { y: 0.6 }
+    });
+}
 </script>
 </body>
 
