added best Demo award in news log

--- a/index.html
+++ b/index.html
@@ -118,7 +118,7 @@
                             <li>A paper on deployed application: <a href="https://aaai.org/aaai-conference/iaai-24-program/" target="_blank">'Promoting Research Collaboration with Open Data Driven
                             Team Recommendation in Response to Call for Proposals'</a> on Feb 22nd.</li> 
                             
-                            <li>A demonstration paper on  <a href="https://aaai.org/aaai-conference/demos-24-program/" target="_blank">'Expressive and Flexible Simulation of Information Spread Strategies in Social Networks Using Planning'</a> on Feb 24th.</li>
+                            <li>A demonstration paper on  <a href="https://ai4society.github.io/publications/papers_local/InfoSpread_AAAI24_Demo.pdf" target="_blank">'Expressive and Flexible Simulation of Information Spread Strategies in Social Networks Using Planning'</a> on Feb 24th. Presented with the <strong>Best Demo Award</strong>.</li>
                             
                             <li>A workshop on  <a href="https://sites.google.com/view/aielections" target="_blank">'AI for Credible Elections: A Call To Action with Trusted AI'</a> on Feb 26th.</li>
                           </ul>
