--- a/publications/index.html
+++ b/publications/index.html
@@ -82,8 +82,8 @@
                     <h2>2024</h2>
                     <ul class="papers-list">
 
-                        <li><b>Promoting Research Collaboration with Open Data Driven Team Recommendation in Response to Call for Proposals</b><br>
-                            <i>Deployed Application paper in the Proceedings of the Thirty-Sixth Annual Conference on Innovative Applications of Artificial Intelligence (AAAI/IAAI-24)</i><span class="best-demo-badge">Deployed Application Award at AAAI/IAAI-24</span></b><br><br>
+                        <li><b>Promoting Research Collaboration with Open Data Driven Team Recommendation in Response to Call for Proposals</b><span class="best-demo-badge">Deployed Application Award at AAAI/IAAI-24</span><br>
+                            <i>Deployed Application paper in the Proceedings of the Thirty-Sixth Annual Conference on Innovative Applications of Artificial Intelligence (AAAI/IAAI-24)</i><br>
                             Siva Likitha Valluru, Biplav Srivastava, Sai Teja Paladi, Siwen Yan, Sriraam Natarajan<br>
                             <a href='./papers_local/ULTRA-IAAI_AAAI2024_Deployed_Application_Track.pdf' target="_blank">[Paper]</a>
                             <span class="tag tag-type">Conference</span>
