--- a/publications/index.html
+++ b/publications/index.html
@@ -82,22 +82,23 @@
                     <h2>2024</h2>
                     <ul class="papers-list">
 
-                        <li><b>Promoting Research Collaboration with Open Data Driven Team Recommendation in Response to Call for Proposals</b><span class="best-demo-badge">Deployed Application Award at AAAI/IAAI-24</span><br>
+                        <li><b>Promoting Research Collaboration with Open Data Driven Team Recommendation in Response to Call for Proposals</b><br>
                             <i>Deployed Application paper in the Proceedings of the Thirty-Sixth Annual Conference on Innovative Applications of Artificial Intelligence (AAAI/IAAI-24)</i><br>
                             Siva Likitha Valluru, Biplav Srivastava, Sai Teja Paladi, Siwen Yan, Sriraam Natarajan<br>
                             <a href='./papers_local/ULTRA-IAAI_AAAI2024_Deployed_Application_Track.pdf' target="_blank">[Paper]</a>
                             <span class="tag tag-type">Conference</span>
                             <span class="tag tag-method">Recommender Systems</span>
+                            <span class="best-demo-badge">Deployed Application Award at AAAI/IAAI-24</span>
                             <br>
                         
                         <li>
-                            <b>Expressive and Flexible Simulation of Information Spread Strategies in Social Networks Using Planning
-                            <span class="best-demo-badge">Best Demo at AAAI-24</span></b><br>
+                            <b>Expressive and Flexible Simulation of Information Spread Strategies in Social Networks Using Planning</b><br>
                             <i>Proceedings of the Thirty-Eighth Annual Conference of Association for Advancement of Artificial Intelligence - Demonstrations Track (AAAI-24 Demo)</i><br>
                             Bharath Muppasani, Vignesh Narayanan, Biplav Srivastava, Michael N. Huhns<br>
                             <a href='./papers_local/InfoSpread_AAAI24_Demo.pdf' target="_blank">[Paper]</a>
                             <span class="tag tag-type">Demo</span>
                             <span class="tag tag-method">Automated Planning</span>
+                            <span class="best-demo-badge">Best Demo at AAAI-24</span>
                         </li>
                             
                         <li><b>ULTRA: Exploring Team Recommendations in Two Geographies Using Open Data in Response to Call for Proposals</b><br>
