--- a/publications/index.html
+++ b/publications/index.html
@@ -248,7 +248,7 @@
                         <li><b>Promoting Sustainable Water Usage and Management with Water Data, AI and Policy</b><br>
                             <i>In 6th Joint International Conference on Data Science & Management of Data (10th ACM IKDD CODS and 28th COMAD) (CODS-COMAD 2023), January 4–7, 2023, Mumbai, India</i><br>
                             Bihu Suchetana, Biplav Srivastava, Hari Prabhat Gupta, Manabendra Saharia<br>
-                            [Paper - coming soon]
+                            <a href='https://dl.acm.org/doi/pdf/10.1145/3570991.3571021' target="_blank">[Paper]</a>
                             <span class="tag tag-type">Tutorial</span>
                             <span class="tag tag-domain">Water</span>
                             <br>
