--- a/news-journal/index.html
+++ b/news-journal/index.html
@@ -70,7 +70,7 @@
             <div class="newsjournal-item">
               <div class="newsjournal-month">December</div>
               <div class="newsjournal-content">
-                <p><a href="https://vishalpallagani.github.io/" target="_blank">Vishal</a> will present a paper at
+                <p><a href="https://vishalpallagani.github.io/" target="_blank">Vishal Pallagani</a> will present a paper at
                   Neurips 2023 workshop on Generalized Planning (LLMs and Planning).</p>
                 <p><a href="https://sites.google.com/site/biplavsrivastava/" target="_blank">Biplav Srivastava</a> will participate
                   with two posters at Americal Geophysical Union (AGU) (AI and water).</p>
@@ -82,7 +82,7 @@
             <div class="newsjournal-item">
               <div class="newsjournal-month">November</div>
               <div class="newsjournal-content">
-                <p><a href="https://kausik-l.github.io/" target="_blank">Kausik</a> is presenting one paper each at IEEE
+                <p><a href="https://kausik-l.github.io/" target="_blank">Kausik Lakkaraju</a> is presenting one paper each at IEEE
                   TPS and ACM AI and Finance (ICAIF) conferences (AI trust).</p>
               </div>
             </div>
