--- a/index.html
+++ b/index.html
@@ -126,7 +126,7 @@
                         <p>Our group is the lead to involve the University of South Carolina in collaborating with the National Institute of Standards and Technology (NIST) for the Artificial Intelligence Safety Institute Consortium (AISIC). 
                           [<a href="https://www.nist.gov/artificial-intelligence/artificial-intelligence-safety-institute" target="_blank">announcement</a>, <a href="https://www.nist.gov/artificial-intelligence/artificial-intelligence-safety-institute/aisic-members" target="_blank">members</a>]</p>
                         <p><a href="https://vishalpallagani.github.io/" target="_blank">Vishal Pallagani</a> got elected to the Student Committee of the AAAI - the international Association for the  Advancement of Artificial Intelligence!</p>
-                        <p><a href="https://www.linkedin.com/in/likitha9/" target="_blank">Likitha</a> successfully
+                        <p><a href="https://www.linkedin.com/in/likitha9/" target="_blank">Likitha Valluru</a> successfully
                           defended her dissertation proposal on February 2nd: <i>Trustable Methods for Group Recommendations With
                             Application to Team Formation.</i></p>
                       </div>
