added AAAI-24 Demo poster

--- a/publications/index.html
+++ b/publications/index.html
@@ -96,6 +96,7 @@
                             <i>Proceedings of the Thirty-Eighth Annual Conference of Association for Advancement of Artificial Intelligence - Demonstrations Track (AAAI-24 Demo)</i><br>
                             Bharath Muppasani, Vignesh Narayanan, Biplav Srivastava, Michael N. Huhns<br>
                             <a href='./papers_local/InfoSpread_AAAI24_Demo.pdf' target="_blank">[Paper]</a>
+                            <a href="./papers_local/AAAI-24_Demo_Poster.pdf" target="_blank">[Poster]</a>
                             <span class="tag tag-type">Demo</span>
                             <span class="tag tag-method">Automated Planning</span>
                             <span class="best-demo-badge">Best Demo at AAAI-24</span>
