--- a/news-journal/index.html
+++ b/news-journal/index.html
@@ -49,6 +49,60 @@
               <div class="newsjournal-dot"></div>
               <div class="newsjournal-year">2024</div>
             </div>
+
+            <!-- February 2024 -->
+            <div class="newsjournal-item">
+              <div class="timeline-dot"></div>
+              <div class="newsjournal-month">February</div>
+              <div class="newsjournal-content">
+                <p>Our <a href="https://ai4society.github.io/" target="_blank">group</a> will be involved at the
+                  premier AI conference, <a href="https://aaai.org/aaai-conference/program-overview/">AAAI 2024</a>, with:
+                <ul>
+                  <li>A tutorial on <a
+                      href="https://aaai.org/aaai-conference/aaai-24-tutorial-and-lab-list/#lq02"
+                      target="_blank">'Harnessing Large Language Models for Planning: A Lab on Strategies for
+                      Success and Mitigation of Pitfalls during that time'</a> on Feb 21st.</li>
+
+                  <li>A paper called 'From Cloud to Edge: Rethinking Generative AI for Low-Resource Design
+                    Challenges' at <a href="https://aaai.org/aaai-conference/aaai-24-bridge-list/#bp03"
+                      target="_blank">'Artificial Intelligence for Design Problems'</a> bridge program on Feb
+                    21st.</li>
+
+                  <li>A paper on deployed application: <a
+                      href="https://aaai.org/aaai-conference/iaai-24-program/" target="_blank">'Promoting
+                      Research Collaboration with Open Data Driven
+                      Team Recommendation in Response to Call for Proposals'</a> on Feb 22nd. Presented with the
+                    <strong>Deployed Application Award</strong>.</li>
+
+                  <li>A demonstration paper on <a
+                      href="https://ai4society.github.io/publications/papers_local/InfoSpread_AAAI24_Demo.pdf"
+                      target="_blank">'Expressive and Flexible Simulation of Information Spread Strategies in
+                      Social Networks Using Planning'</a> on Feb 24th. Presented with the <strong>Best Demo
+                      Award</strong>.</li>
+
+                  <li>A workshop on <a href="https://sites.google.com/view/aielections" target="_blank">'AI for
+                      Credible Elections: A Call To Action with Trusted AI'</a> on Feb 26th.</li>
+                </ul>
+                </p>
+                <p>Our group is the lead to involve the University of South Carolina in collaborating with the
+                  National Institute of Standards and Technology (NIST) for the Artificial Intelligence Safety
+                  Institute Consortium (AISIC).
+                  [<a
+                    href="https://www.nist.gov/artificial-intelligence/artificial-intelligence-safety-institute"
+                    target="_blank">announcement</a>, <a
+                    href="https://www.nist.gov/artificial-intelligence/artificial-intelligence-safety-institute/aisic-members"
+                    target="_blank">members</a>]</p>
+                <p><a href="https://vishalpallagani.github.io/" target="_blank">Vishal Pallagani</a> got elected
+                  to the Student Committee of the AAAI - the international Association for the Advancement of
+                  Artificial Intelligence!</p>
+                <p><a href="https://www.linkedin.com/in/likitha9/" target="_blank">Likitha Valluru</a>
+                  successfully
+                  defended her dissertation proposal on February 2nd: <i>Trustable Methods for Group
+                    Recommendations With
+                    Application to Team Formation.</i></p>
+              </div>
+            </div>
+
             <div class="newsjournal-item">
               <!-----January 2024-->
               <div class="newsjournal-month">January</div>
