--- a/activities/index.html
+++ b/activities/index.html
@@ -122,7 +122,7 @@
                           <div class="activities-year">2024</div>
                           <div class="activities-content">
                             <p>
-                              <span class="activities-content-title">Tutorial on <a href="" target="_blank">Harnessing Large Language Models for Planning: A Lab on Strategies for Success and Mitigation of Pitfalls</a></span><br>
+                              <span class="activities-content-title">Tutorial on <a href="https://github.com/VishalPallagani/LLMsforPlanningLab-AAAI24" target="_blank">Harnessing Large Language Models for Planning: A Lab on Strategies for Success and Mitigation of Pitfalls</a></span><br>
                               <span class="activities-content-event">38th Conference of Association for Advancement of Artificial Intelligence  (<a href="https://aaai.org/aaai-conference/" target="_blank">AAAI-24</a>)</span><br>
                               <span class="activities-content-members">Vishal Pallagani, Keerthiram Murugesan, Biplav Srivastava, Francesca Rossi, Lior Horesh</span><br>
                               <span class="activities-content-month">February</span>
