--- a/projects/generalized_planning/index.html
+++ b/projects/generalized_planning/index.html
@@ -50,7 +50,7 @@
                   <p><i><b>Representative Publications</b></i></p>
                   <ul>
                     <li>On the Prospects of Incorporating Large Language Models (LLMs) in Automated Planning and Scheduling (APS) <br> 
-                      <i>Preprint</i> <br>
+                      <i>The 34th International Conference on Automated Planning and Scheduling (ICAPS), 2024</i> <br>
                       <a href="https://arxiv.org/abs/2401.02500" target="_blank"><b>[Paper]</b></a>
                       <a href="./bib/position.txt" target="_blank" type="text/plain"><b>[BibTex]</b></a>
                     </li>
@@ -60,14 +60,23 @@
                       <a href="./bib/understanding.txt" target="_blank" type="text/plain"><b>[BibTex]</b></a>
                     </li>
                     <li> Plansformer Tool: Demonstrating Generation of Symbolic Plans Using Transformers <br> 
-                      <i>Proc. of the Thirty-Second International Joint Conference on Artificial Intelligence (IJCAI-23) Demonstrations Track</i> <br>
+                      <i>Proc. of the Thirty-Second International Joint Conference on Artificial Intelligence (IJCAI) Demonstrations Track, 2023</i> <br>
                       <a href="https://www.ijcai.org/proceedings/2023/0839.pdf" target="_blank"><b>[Paper]</b></a><a href="uo-sc-plansformer.vercel.app" target="_blank"><b>[Tool Website]</b></a>
                       <a href="https://www.youtube.com/watch?v=_1rlctCGsrk" target="_blank"><b>[Demo]</b></a><a href="./bib/plansformer_tool.txt" target="_blank" type="text/plain"><b>[BibTex]</b></a>
                     </li>
                     <li>Plansformer: Generating Symbolic Plans using Transformers <br> 
-                      <i>NeurIPS 2023 Workshop on Generalization in Planning (GenPlan 2023)</i><br>
+                      <i>Workshop on Generalization in Planning (GenPlan) at NeurIPS, 2023</i><br>
                       <a href="https://arxiv.org/abs/2212.08681" target="_blank"><b>[Paper]</b></a>
                       <a href="./bib/plansformer.txt" target="_blank" type="text/plain"><b>[BibTex]</b></a>
+                    </li>
+                  </ul>
+                  <p><i><b>Representative Activities</b></i></p>
+                  <ul>
+                    <li>Harnessing Large Language Models for Planning: A Lab on Strategies for Success and Mitigation of Pitfalls<br> 
+                      <i>AAAI Conference on Artificial Intelligence, 2024</i> <br>
+                      <a href="https://github.com/VishalPallagani/LLMsforPlanningLab-AAAI24" target="_blank"><b>[Github]</b></a>
+                      <a href="https://sites.google.com/view/llmsxplanning-lab/home" target="_blank"><b>[Website]</b></a>
+                      <a href="./bib/aaai_lab.txt" target="_blank" type="text/plain"><b>[BibTex]</b></a>
                     </li>
                   </ul>
                   <tr style="padding:0px">
