--- a/news-journal/index.html
+++ b/news-journal/index.html
@@ -84,7 +84,7 @@
                       Credible Elections: A Call To Action with Trusted AI'</a> on Feb 26th.</li>
                 </ul>
                 </p>
-                <p>Our group is the lead to involve the University of South Carolina in collaborating with the
+                <p>Our group has lead the University of South Carolina in getting itself included as a collaborator with the
                   National Institute of Standards and Technology (NIST) for the Artificial Intelligence Safety
                   Institute Consortium (AISIC).
                   [<a
