--- a/news-journal/index.html
+++ b/news-journal/index.html
@@ -110,8 +110,7 @@
                 <p><a href="https://www.linkedin.com/in/rushil-thareja-a80400179/" target="_blank">Rushil Thareja</a>
                   is joining us as a new Ph.D. student.</p>
                 <p><a href="https://www.linkedin.com/in/likitha9/" target="_blank">Likitha Valluru</a> will present a demo
-                  paper at CODS-COMAD 2024 conference (Group recommendation). We are also co-organizing the tutorial track
-                  of the conference.</p>
+                  paper at <a href="https://cods-comad.in/">CODS-COMAD 2024</a> conference (Group recommendation). We are also co-organizing the tutorial track for the conference.</p>
               </div>
             </div>
 
