--- a/news-journal/index.html
+++ b/news-journal/index.html
@@ -55,7 +55,7 @@
               <div class="timeline-dot"></div>
               <div class="newsjournal-month">February</div>
               <div class="newsjournal-content">
-                <p>Our <a href="https://ai4society.github.io/" target="_blank">group</a> will be involved at the
+                <p>Our <a href="https://ai4society.github.io/" target="_blank">group</a> was involved at the
                   premier AI conference, <a href="https://aaai.org/aaai-conference/program-overview/">AAAI 2024</a>, with:
                 <ul>
                   <li>A tutorial on <a
