--- a/news-journal/index.html
+++ b/news-journal/index.html
@@ -85,7 +85,7 @@
                 </ul>
                 </p>
                 <p>Our group has lead the University of South Carolina in getting itself included as a collaborator with the
-                  National Institute of Standards and Technology (NIST) for the Artificial Intelligence Safety
+                  <a href="https://www.nist.gov/">National Institute of Standards and Technology</a> (NIST) for the Artificial Intelligence Safety
                   Institute Consortium (AISIC).
                   [<a
                     href="https://www.nist.gov/artificial-intelligence/artificial-intelligence-safety-institute"
