--- a/index.html
+++ b/index.html
@@ -27,19 +27,21 @@
             style="width:100%;border:0px;border-spacing:0px;border-collapse:separate;margin-right:auto;margin-left:auto;">
             <tbody>
               <tr style="padding:0px">
-                <td style="padding-left:2.5%;padding-top:3%;width:63%;vertical-align:middle">
+                <td style="padding-left:2.5%;padding-top:3%;width:100%;vertical-align:middle">
                   <p style="text-align:left">
                     <a href='index.html'>Home</a> &nbsp|&nbsp
-                    <a href='members/index.html'>Members</a> &nbsp|&nbsp
-                    <a href='projects/index.html'>Projects</a> &nbsp|&nbsp
-                    <a href='publications/index.html'>Publications</a> &nbsp|&nbsp
-                    <a href='funding/index.html'>Funding</a> &nbsp|&nbsp
+                    <a href='activities/index.html'>Activities</a> &nbsp|&nbsp
+                    <a href='awards/index.html'>Awards</a> &nbsp|&nbsp
                     <a href='demos/index.html'>Demos</a> &nbsp|&nbsp
+                    <a href='funding/index.html'>Funding</a> &nbsp|&nbsp
+                    <a href='members/index.html'>Members</a> &nbsp|&nbsp
                     <a href='news-journal/index.html'>NewsLog</a> &nbsp|&nbsp
-                    <a href='activities/index.html'>Activities</a>
+                    <a href='projects/index.html'>Projects</a> &nbsp|&nbsp
+                    <a href='publications/index.html'>Publications</a>
                   </p>
                 </td>
               </tr>
+              
 
               <tr style="padding:0px">
                 <td style="padding-left:2.5%;padding-right:2.5%;width:63%;vertical-align:middle">
