--- a/awards/index.html
+++ b/awards/index.html
@@ -38,7 +38,22 @@
                 <heading>Awards</heading>
                 <hr style="width: 100%; float: left;">
                     
-                <!-- Add list here -->
+                <ul>
+                    <li>Our paper titled 'Expressive and Flexible Simulation of Information Spread Strategies
+                        in Social Networks Using Planning' authored by Bharath Muppasani, Vignesh Narayanan, 
+                        Biplav Srivastava, and Michael N. Huhns, has been honored with the Best Technical 
+                        Demonstration Award at the 2024 AAAI Conference by the Association for the Advancement 
+                        of Artificial Intelligence (AAAI). </li>
+                    <li>Our paper titled 'Promoting Research Collaboration with Open Data Driven 
+                        Team Recommendation in Response to Call for Proposals' authored by 
+                        Siva Likitha Valluru, Biplav Srivastava, Sai Teja Paladi, 
+                        Siwen Yan, and Sriraam Natarajan has been honored with the 2024 IAAI 
+                        Deployed Application Award at AAAI 2024 conference by the Association for the Advancement 
+                        of Artificial Intelligence (AAAI).</li>
+                    <li>In April 2023, Kausik Lakkaraju was honored with the Best Graduate Student Poster 
+                        Presentation Award at the Discover USC event, a university-wide showcase at the University 
+                        of South Carolina for his work on 'Rating of AI Systems through a Causal Lens'.</li>
+                </ul>
 
 
 
