--- a/awards/index.html
+++ b/awards/index.html
@@ -38,12 +38,12 @@
                 <heading>Awards</heading>
                 <hr style="width: 100%; float: left;">
                 <ul>
-                    <li style="margin-bottom: 20px; font-size: 18px">Our paper titled 'Expressive and Flexible Simulation of Information Spread Strategies
+                    <li style="margin-bottom: 20px; font-size: 18px">In February 2024, Our paper titled 'Expressive and Flexible Simulation of Information Spread Strategies
                         in Social Networks Using Planning' authored by Bharath Muppasani, Vignesh Narayanan, 
                         Biplav Srivastava, and Michael N. Huhns, has been honored with the <a href="./certificates/AAAI-2024-BestDemo.pdf" style="font-size: 18px">Best Technical 
                         Demonstration Award</a> at the 2024 AAAI Conference by the Association for the Advancement 
                         of Artificial Intelligence (AAAI). </li>
-                    <li style="margin-bottom: 20px; font-size: 18px">Our paper titled 'Promoting Research Collaboration with Open Data Driven 
+                    <li style="margin-bottom: 20px; font-size: 18px">In February 2024, Our paper titled 'Promoting Research Collaboration with Open Data Driven 
                         Team Recommendation in Response to Call for Proposals' authored by 
                         Siva Likitha Valluru, Biplav Srivastava, Sai Teja Paladi, 
                         Siwen Yan, and Sriraam Natarajan has been honored with the <a href="./certificates/AAAI-2024-IAAI.jpg" style="font-size: 18px">2024 IAAI 
