--- a/awards/index.html
+++ b/awards/index.html
@@ -38,20 +38,24 @@
                 <heading>Awards</heading>
                 <hr style="width: 100%; float: left;">
                 <ul>
-                    <li style="margin-bottom: 20px; font-size: 16px">In February 2024, Our paper titled 'Expressive and Flexible Simulation of Information Spread Strategies
+                    <li style="margin-bottom: 20px; font-size: 16px">In February 2024, our paper titled 'Expressive and Flexible Simulation of Information Spread Strategies
                         in Social Networks Using Planning' authored by Bharath Muppasani, Vignesh Narayanan, 
                         Biplav Srivastava, and Michael N. Huhns, has been honored with the <a href="./certificates/AAAI-2024-BestDemo.pdf" style="font-size: 18px">Best Technical 
                         Demonstration Award</a> at the 2024 AAAI Conference by the Association for the Advancement 
-                        of Artificial Intelligence (AAAI). </li>
-                    <li style="margin-bottom: 20px; font-size: 16px">In February 2024, Our paper titled 'Promoting Research Collaboration with Open Data Driven 
+                        of Artificial Intelligence (AAAI). More info can be found 
+                        <a style="font-size: 18px" href="https://www.linkedin.com/feed/update/urn:li:activity:7168707053862014977?updateEntityUrn=urn%3Ali%3Afs_feedUpdate%3A%28V2%2Curn%3Ali%3Aactivity%3A7168707053862014977%29">
+                        here</a>.</li>
+                    <li style="margin-bottom: 20px; font-size: 16px">In February 2024, our paper titled 'Promoting Research Collaboration with Open Data Driven 
                         Team Recommendation in Response to Call for Proposals' authored by 
                         Siva Likitha Valluru, Biplav Srivastava, Sai Teja Paladi, 
                         Siwen Yan, and Sriraam Natarajan has been honored with the <a href="./certificates/AAAI-2024-IAAI.jpg" style="font-size: 18px">2024 IAAI 
                         Deployed Application Award</a> at AAAI 2024 conference by the Association for the Advancement 
-                        of Artificial Intelligence (AAAI).</li>
+                        of Artificial Intelligence (AAAI). More info can be found 
+                        <a style="font-size: 18px" href="https://www.linkedin.com/feed/update/urn:li:activity:7166818744667762688?updateEntityUrn=urn%3Ali%3Afs_feedUpdate%3A%28V2%2Curn%3Ali%3Aactivity%3A7166818744667762688%29">
+                        here</a>.</li>
                     <li style="margin-bottom: 20px; font-size: 16px">In April 2023, Kausik Lakkaraju was honored with the <a href="https://www.sc.edu/about/signature_events/discover_uofsc/about/news/2023/20220428_Check_Out_DUSC_2023.php" style="font-size: 18px">
                         Best Graduate Student Poster Presentation Award</a> at the Discover USC event, a university-wide showcase at the University 
-                        of South Carolina for his work on 'Rating of AI Systems through a Causal Lens'.</li>
+                        of South Carolina for his work on 'Rating of AI Systems through a Causal Lens'. The poster can be found <a style="font-size: 18px" href="./certificates/DiscoverUSC-2023-psoter.pdf">here</a></li>
                 </ul>
 
 
