--- a/awards/index.html
+++ b/awards/index.html
@@ -55,7 +55,7 @@
                         here</a>.</li>
                     <li style="margin-bottom: 20px; font-size: 16px">In April 2023, Kausik Lakkaraju was honored with the <a href="https://www.sc.edu/about/signature_events/discover_uofsc/about/news/2023/20220428_Check_Out_DUSC_2023.php" style="font-size: 18px">
                         Best Graduate Student Poster Presentation Award</a> at the Discover USC event, a university-wide showcase at the University 
-                        of South Carolina for his work on 'Rating of AI Systems through a Causal Lens'. The poster can be found <a style="font-size: 18px" href="./certificates/DiscoverUSC-2023-psoter.pdf">here</a></li>
+                        of South Carolina for his work on 'Rating of AI Systems through a Causal Lens'. The poster can be found <a style="font-size: 18px" href="./certificates/DiscoverUSC-2023-psoter.pdf">here.</a></li>
                 </ul>
 
 
