--- a/awards/index.html
+++ b/awards/index.html
@@ -113,7 +113,7 @@
                             </script>
                         </li>
 
-                    <li style="margin-bottom: 20px; font-size: 16px"><img id="myImg2" src="./certificates/DiscoverUSC-2023-psoter.jpg"
+                    <li style="margin-bottom: 20px"><img id="myImg2" src="./certificates/DiscoverUSC-2023-psoter.jpg"
                         alt="🎉 2023 Discover USC Best Graduate Student Poster in the CSCE Department 🎉"
                         style="width:100%;max-width:100px;height:50px;">In April 2023, Kausik Lakkaraju was honored with the
                         Best Graduate Student Poster Presentation Award</a> at the Discover USC event, a university-wide showcase at the University 
