new journal paper

--- a/publications/index.html
+++ b/publications/index.html
@@ -82,6 +82,14 @@
                     <h2>2024</h2>
                     <ul class="papers-list">
 
+                        <li><b>Rating Sentiment Analysis Systems for Bias through a Causal Lens</b><br>
+                            <i>IEEE Transactions on Technology and Society</i><br>
+                            Kausik Lakkaraju, Biplav Srivastava, Marco Valtorta<br>
+                            <a href='https://ieeexplore.ieee.org/document/10466637' target="_blank">[Paper]</a>
+                            <span class="tag tag-type">Journal</span>
+                            <span class="tag tag-method">Trust Rating</span>
+                            <br>
+
                         <li><b>Promoting Research Collaboration with Open Data Driven Team Recommendation in Response to Call for Proposals</b><br>
                             <i>Deployed Application paper in the Proceedings of the Thirty-Sixth Annual Conference on Innovative Applications of Artificial Intelligence (AAAI/IAAI-24)</i><br>
                             Siva Likitha Valluru, Biplav Srivastava, Sai Teja Paladi, Siwen Yan, Sriraam Natarajan<br>
@@ -183,13 +191,7 @@
                             <span class="tag tag-method">Trust Rating</span>
                             <br>
 
-                        <li><b>Rating Sentiment Analysis Systems for Bias through a Causal Lens</b><br>
-                            <!-- <i>IEEE Transactions on Technology and Society</i><br> -->
-                            Kausik Lakkaraju, Biplav Srivastava, Marco Valtorta<br>
-                            <a href='https://arxiv.org/pdf/2302.02038.pdf' target="_blank">[Paper]</a>
-                            <span class="tag tag-type">Preprint</span>
-                            <span class="tag tag-method">Trust Rating</span>
-                            <br>
+
 
                         <li><b>Evaluating Chatbots to Promote Users' Trust -- Practices and Open Problems</b><br>
                                 <!-- <i>IEEE Transactions on Technology and Society</i> -->
