--- a/projects/rating_page/index.html
+++ b/projects/rating_page/index.html
@@ -44,31 +44,28 @@
                     <br>
                 </p>
                 <p style="text-align: justify;">
-                  Sentiment Analysis Systems (SASs) are data-driven
-                  Artificial Intelligence (AI) systems that assign one or more
-                  numbers to convey the polarity and emotional intensity of a
-                  given piece of text. However, like other automatic machine
-                  learning systems, SASs can exhibit model uncertainty, resulting
-                  in drastic swings in output with even small changes in input. This
-                  issue becomes more problematic when inputs involve protected
-                  attributes like gender or race, as it can be perceived as bias or
-                  unfairness. To address this, we propose a novel method to assess
-                  and rate SASs. We perturb inputs in a controlled causal setting
-                  to test if the output sentiment is sensitive to protected attributes
-                  while keeping other components of the textual input, such as
-                  chosen emotion words, fixed. Based on the results, we assign
-                  labels (ratings) at both fine-grained and overall levels to indicate
-                  the robustness of the SAS to input changes. These ratings provide
-                  a principled basis for comparing SASs and making informed
-                  choices based on their behavior. The ratings also benefit all users,
-                  especially developers who reuse off-the-shelf SASs to build larger
-                  AI systems but do not have access to their code or training data
-                  to compare.
+                  Sentiment Analysis Systems (SASs) are data-driven Artificial Intelligence (AI) systems that 
+                  assign one or more numbers to convey the polarity and emotional intensity of a given piece of 
+                  text. However, like other automatic machine learning systems, SASs can exhibit model uncertainty, 
+                  resulting in drastic swings in output with even small changes in input. This issue becomes more 
+                  problematic when inputs involve protected attributes like gender or race, as it can be perceived 
+                  as bias or unfairness. To address this, we propose a novel method to assess and rate SASs. 
+                  We perturb inputs in a controlled causal setting to test if the output sentiment is sensitive 
+                  to protected attributes while keeping other components of the textual input, such as chosen
+                  emotion words, fixed. Based on the results, we assign labels (ratings) at both fine-grained and 
+                  overall levels to indicate the robustness of the SAS to input changes. The ratings can help 
+                  decision-makers improve online content by reducing hate speech, often fueled by biases related 
+                  to protected attributes such as gender and race. These ratings provide a principled basis for
+                  comparing SASs and making informed choices based on their behavior. The ratings also benefit 
+                  all users, especially developers who reuse off-the-shelf SASs to build larger AI systems but 
+                  do not have access to their code or training data to compare. 
                 </p>
                 
                   <p><i><b>Representative Publications</b></i></p>
                   <ul>
-                    <li>Lakkaraju, K., Srivastava, B., & Valtorta, M. (2023). Rating Sentiment Analysis Systems for Bias through a Causal Lens. arXiv preprint arXiv:2302.02038.<br><a href="https://arxiv.org/pdf/2302.02038.pdf" target="_blank"><b>[Paper]</b></a>
+                    <li>K. Lakkaraju, B. Srivastava and M. Valtorta, "Rating Sentiment Analysis Systems for Bias Through a Causal Lens," in IEEE Transactions on Technology and Society, doi: 10.1109/TTS.2024.3375519.
+                      keywords: {AI;Bias;Causality;Rating;Sentiment Analysis Systems;User Trust}.
+                      <br><a href="https://ieeexplore.ieee.org/document/10466637" target="_blank"><b>[Paper]</b></a>
                       <a href="https://github.com/ai4society/causal-sas-rating.git" target="_blank" type="text/plain"><b>[GitHub Respository]</b></a>
                       <a href="../rating_page/bib/ieee_tts2023.txt" target="_blank" type="text/plain"><b>[BibTex]</b></a>
                     </li>
@@ -100,7 +97,8 @@
                   data has protected attributes like gender, race, and age. Recently,
                   an approach was introduced to assess SASs in a blackbox setting
                   without training data or code, and rating them for bias using
-                  synthetic English data. We augment it by introducing two human-generated chatbot datasets and also considering a round-trip
+                  synthetic English data. We augment it by introducing two 
+                  human-generated chatbot datasets and also considering a round-trip
                   setting of translating the data from one language to the same
                   through an intermediate language. We find that these settings
                   show SASs performance in a more realistic light. Specifically,
