--- a/awards/index.html
+++ b/awards/index.html
@@ -65,7 +65,7 @@
                 </td>
             </tr>
             <tr style="padding:0px">
-                <td style="padding-left:2.5%;">
+                <td style="padding-left:2.5%;width:63%;vertical-align:middle">
                     <h2>Awards</h2>
                     <hr>
                     <ul>
@@ -129,6 +129,9 @@
                         <script>
                         setupModal("myImg2", "myModal", "img01", "caption", "close");
                         </script>
+
+                      <h2>Recognitions</h2>
+                      <li style="margin-bottom: 20px">In February 2024, Vishal Pallagani got elected to the <a href="https://aaai.org/about-aaai/aaai-officers-and-committees/">Committee of AAAI - the International Association for the Advancement of Artificial Intelligence.</a></li>
                 </ul>
 
 
