--- a/awards/index.html
+++ b/awards/index.html
@@ -131,7 +131,7 @@
                         </script>
 
                       <h2>Recognitions</h2>
-                      <li style="margin-bottom: 20px">In February 2024, Vishal Pallagani got elected to the <a href="https://aaai.org/about-aaai/aaai-officers-and-committees/">Committee of AAAI - the International Association for the Advancement of Artificial Intelligence.</a></li>
+                      <li style="margin-bottom: 20px">In February 2024, Vishal Pallagani got elected to the <a href="https://aaai.org/about-aaai/aaai-officers-and-committees/">Student Committee of AAAI - the International Association for the Advancement of Artificial Intelligence.</a></li>
                 </ul>
 
 
