--- a/publications/index.html
+++ b/publications/index.html
@@ -86,6 +86,7 @@
                             <i>Deployed Application paper in the Proceedings of the Thirty-Sixth Annual Conference on Innovative Applications of Artificial Intelligence (AAAI/IAAI-24)</i><br>
                             Siva Likitha Valluru, Biplav Srivastava, Sai Teja Paladi, Siwen Yan, Sriraam Natarajan<br>
                             <a href='./papers_local/ULTRA-IAAI_AAAI2024_Deployed_Application_Track.pdf' target="_blank">[Paper]</a>
+                            <a href="./papers_local/AAAI-IAAI-2024-ULTRA-Poster.pdf" target="_blank">[Poster]</a>
                             <span class="tag tag-type">Conference</span>
                             <span class="tag tag-method">Recommender Systems</span>
                             <span class="best-demo-badge">Deployed Application Award at AAAI/IAAI-24</span>
