--- a/index.html
+++ b/index.html
@@ -110,7 +110,7 @@
                       <div class="timeline-dot"></div>
                       <div class="timeline-date month">March</div>
                       <div class="timeline-content">
-                        <p>Our <a href="https://ai4society.github.io/" target="_blank">group</a> will present their work at the upcoming <a href="https://www.cse.sc.edu/event/cse-research-symposium-0">CSE Research Symposium</a> on March 15th.</p>
+                        <p>Our <a href="https://ai4society.github.io/" target="_blank">group</a> will present their work at the upcoming <a href="https://cse.sc.edu/event/cse-research-symposium-2024">CSE Research Symposium</a> on March 15th.</p>
                       </div>
                     </div>
 
